Monitor more components
This commit:
- Adds support to monitor kube-apisever and monitoring stack.
- Refactors the namespace watch function to be generic instead
  of per component.
- Bumps the default sleep time between each iteration to 60s.

--- a/config/config.ini
+++ b/config/config.ini
@@ -14,6 +14,18 @@ watch_openshift_apiserver: True
 # Namespace to look for the openshift-apiserver pods
 openshift_apiserver_namespace: openshift-apiserver
 
+# Set to True for the cerberus to monitor openshift-apiserver pods
+watch_kube_apiserver: True
+
+# Namespace to look for the kube-apiserver pods
+kube_apiserver_namespace: kube-apiserver
+
+# Set to True for the cerberus to monitor prometheus/monitoring stack pods
+watch_monitoring_stack: True
+
+# Namespace to look for the monitoring stack pods
+monitoring_stack_namespace: openshift-monitoring
+
 # When enabled, cerberus starts a light weight http server and publishes the status
 cerberus_publish_status: True
 
@@ -22,7 +34,7 @@ cerberus_publish_status: True
 iterations: 5
 
 # Sleep duration between each iteration
-sleep_time: 1
+sleep_time: 60
 
 # Iterations are set to infinity which means that the cerberus will monitor the resources forever
 daemon_mode: True
