--- a/config/config.ini
+++ b/config/config.ini
@@ -26,6 +26,12 @@ watch_monitoring_stack: True
 # Namespace to look for the monitoring stack pods
 monitoring_stack_namespace: openshift-monitoring
 
+# Set to True for the cerberus to monitor kube-controller
+watch_kube_controller: True
+
+# Namespace to look for the kube controller pods
+kube_controller_namespace: openshift-kube-controller
+
 # When enabled, cerberus starts a light weight http server and publishes the status
 cerberus_publish_status: True
 
@@ -34,7 +40,7 @@ cerberus_publish_status: True
 iterations: 5
 
 # Sleep duration between each iteration
-sleep_time: 60
+sleep_time: 1
 
 # Iterations are set to infinity which means that the cerberus will monitor the resources forever
 daemon_mode: True
