Provide user ability to pass custom kubeconfig file path
Closes: #1

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,7 @@
 [cerberus]
+# Path to kubeconfig
+kubeconfig_path:
+
 # Set to True for the cerberus to monitor the cluster nodes
 watch_nodes: True
 
