Monitor machine api components
This commit:
- Adds support to monitor machine api components incuding the operator
  machine-controller and cluster auto-scaler.
- Updates the readme with the sample report generated in case of a
  component failure where it displays the info about the failed node
  or pod.

--- a/config/config.ini
+++ b/config/config.ini
@@ -32,6 +32,12 @@ watch_kube_controller: True
 # Namespace to look for the kube controller pods
 kube_controller_namespace: openshift-kube-controller
 
+# Set to True for the cerberus to monitor machine api components
+watch_machine_api_components: True
+
+# Namespace to look for the Machine API components
+machine_api_namespace: openshift-machine-api
+
 # When enabled, cerberus starts a light weight http server and publishes the status
 cerberus_publish_status: True
 
