--- a/config/config.ini
+++ b/config/config.ini
@@ -38,6 +38,12 @@ watch_machine_api_components: True
 # Namespace to look for the Machine API components
 machine_api_namespace: openshift-machine-api
 
+# Set to True for the cerberus to monitor kube-scheduler
+watch_kube_scheduler: True
+
+# Namespace to look for the kube scheduler pods
+kube_scheduler_namespace: openshift-kube-scheduler
+
 # When enabled, cerberus starts a light weight http server and publishes the status
 cerberus_publish_status: True
 
