--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,6 +13,8 @@ cerberus:
         -    openshift-sdn
         -    openshift-ovn-kubernetes
     cerberus_publish_status: True                        # When enabled, cerberus starts a light weight http server and publishes the status
+    inspect_components: False                            # Enable it only when OpenShift client is supported to run.
+                                                         # When enabled, cerberus collects logs, events and metrics of failed components
 tunings:
     iterations: 5                                        # Iterations to loop before stopping the watch, it will be replaced with infinity when the daemon mode is enabled
     sleep_time: 60                                       # Sleep duration between each iteration
