Updated Dockerfile and README.md
This commit:
- Modifies the Dockerfile to change the config file type from
  ini to yaml.
- Updates README.md file to create a container using the image
  quay.io/openshift-scale/cerberus:latest instead of cerberus:latest.
  This prevents the podman/docker from creating a container using
  cerberus:latest image that might be present on the machine it's
  running. The images quay.io/openshift-scale/cerberus:latest and
  cerberus:latest could be different.

--- a/containers/Dockerfile
+++ b/containers/Dockerfile
@@ -20,4 +20,4 @@ pip3 install -r requirements.txt
 
 WORKDIR /root/cerberus
 
-ENTRYPOINT python3 start_cerberus.py --config=config/config.ini
+ENTRYPOINT python3 start_cerberus.py --config=config/config.yaml
