--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,8 +13,10 @@ cerberus:
         -    openshift-sdn
         -    openshift-ovn-kubernetes
     cerberus_publish_status: True                        # When enabled, cerberus starts a light weight http server and publishes the status
-    inspect_components: False                            # Enable it only when OpenShift client is supported to run.
+    inspect_components: False                            # Enable it only when OpenShift client is supported to run
                                                          # When enabled, cerberus collects logs, events and metrics of failed components
+    slack_integration: False                             # When enabled, cerberus reports status of each iteration in slack channel
+
 tunings:
     iterations: 5                                        # Iterations to loop before stopping the watch, it will be replaced with infinity when the daemon mode is enabled
     sleep_time: 60                                       # Sleep duration between each iteration
