--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,8 +10,7 @@ cerberus:
         -    openshift-machine-api
         -    openshift-kube-scheduler
         -    openshift-ingress
-        -    openshift-sdn
-        -    openshift-ovn-kubernetes
+        -    openshift-sdn                               # When enabled, it will check for the cluster sdn and monitor that namespace
     cerberus_publish_status: True                        # When enabled, cerberus starts a light weight http server and publishes the status
     inspect_components: False                            # Enable it only when OpenShift client is supported to run
                                                          # When enabled, cerberus collects logs, events and metrics of failed components
