Separate operations based on distribution
This commit:
- Adds a high level config option called distribution to be able to
  run operations which are specific to OpenShift in addition to kube
  as mentioned in https://github.com/openshift-scale/cerberus/issues/42
  like inspect_component mode which enables the user to
  collect logs/events related to the failed component using oc inspect
  command.
- Updates readme with info about setting the namespaces to monitor
  in the config depending on the distribution as defaults assumes
  OpenShift. It also adds blogs and other useful resources related
  to Cerberus.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,4 +1,5 @@
 cerberus:
+    distribution: openshift                              # Distribution can be kubernetes or openshift
     kubeconfig_path: ~/.kube/config                      # Path to kubeconfig
     watch_nodes: True                                    # Set to True for the cerberus to monitor the cluster nodes
     watch_cluster_operators: True                        # Set to True for cerberus to monitor cluster operators
