--- a/config/config.yaml
+++ b/config/config.yaml
@@ -33,3 +33,9 @@ tunings:
     iterations: 5                                        # Iterations to loop before stopping the watch, it will be replaced with infinity when the daemon mode is enabled
     sleep_time: 60                                       # Sleep duration between each iteration
     daemon_mode: True                                    # Iterations are set to infinity which means that the cerberus will monitor the resources forever
+
+redis:
+   host: 127.0.0.1                                       # Redis host
+   port: 6379                                            # Redis port
+   flush_keys: True                                      # Flushes all keys to make sure the cache timeer is set right
+   cache_expiry_time: 1200                               # Redis cache expiry time
