Reduce the load on API server for bulk requests
This commit enables Cerberus to handle bulk requests in chunks
instead of a single go as it can generate a very large response
when there are thousands of objects running in the cluster and
overload the server by consuming a large amount of resources.
The chunk size is set to 250 by default to break the large request
while still preserving the consistency of the total request and
improve responsiveness.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -38,4 +38,5 @@ cerberus:
 tunings:
     iterations: 5                                        # Iterations to loop before stopping the watch, it will be replaced with infinity when the daemon mode is enabled
     sleep_time: 60                                       # Sleep duration between each iteration
+    kube_api_request_chunk_size: 250                     # Large requests will be broken into the specified chunk size to reduce the load on API server and improve responsiveness.
     daemon_mode: True                                    # Iterations are set to infinity which means that the cerberus will monitor the resources forever
