--- a/config/config.yaml
+++ b/config/config.yaml
@@ -36,6 +36,8 @@ cerberus:
         Sunday:
     slack_team_alias:                                    # The slack team alias to be tagged while reporting failures in the slack channel when no cop is assigned
 
+    custom_checks:                                       # Relative paths of files conataining additional user defined checks
+
 tunings:
     iterations: 5                                        # Iterations to loop before stopping the watch, it will be replaced with infinity when the daemon mode is enabled
     sleep_time: 60                                       # Sleep duration between each iteration
