--- a/setup.cfg
+++ b/setup.cfg
@@ -1,34 +1,42 @@
+# This file is used to configure your project.
+# Read more about the various options under:
+# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
+
 [metadata]
-name = cerberus
-description = TO guard cluster
-author = chaitanyaenr
+name = cerberus-client
+version = 1.0.0
+author = Naga Ravi Chaitanya Elluri
 author-email = nelluri@redhat.com
-license = mit
+description = Guardian of Kubernetes and OpenShift Clusters
 long-description = file: README.md
 long-description-content-type = text/markdown; charset=UTF-8
+license = mit
+license_file = LICENSE
+url = https://github.com/openshift-scale/cerberus
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
 
 [options]
 zip_safe = False
-packages = find:
 include_package_data = True
-package_dir =
-    =cerberus
-# Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = PyYAML
-# tests_require = pytest; pytest-cov
-# Require a specific Python version, e.g. Python 2.7 or >= 3.4
-# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
+packages = find:
+install_requires =
+    setuptools
+    PyYAML
+    requests
+    kubernetes
+    datetime
+    configparser
+    slackclient
+    pyfiglet
+    prometheus_api_client
 
-[options.packages.find]
-where = src
+[options.package_data]
+cerberus = config.yaml
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install touchstone[PDF]` like:
-# PDF = ReportLab; RXP
 
 [aliases]
 dists = bdist_wheel
@@ -44,3 +52,7 @@ exclude =
     build
     dist
     .eggsse
+
+[options.entry_points]
+console_scripts =
+    cerberus_client = cerberus.start_cerberus:start
