--- a/config/config.yaml
+++ b/config/config.yaml
@@ -39,10 +39,10 @@ cerberus:
     custom_checks:                                       # Relative paths of files conataining additional user defined checks
 
 tunings:
-    iterations: 5
-    sleep_time: 60
+    iterations: 5                                        # Iterations to loop before stopping the watch, it will be replaced with infinity when the daemon mode is enabled
+    sleep_time: 60                                       # Sleep duration between each iteration
     kube_api_request_chunk_size: 250                     # Large requests will be broken into the specified chunk size to reduce the load on API server and improve responsiveness.
-    daemon_mode: True
+    daemon_mode: True                                    # Iterations are set to infinity which means that the cerberus will monitor the resources forever
     cores_usage_percentage: 0.5                          # Set the fraction of cores to be used for multiprocessing
 
 database:
