--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,8 +15,9 @@ cerberus:
         -    openshift-kube-scheduler
         -    openshift-ingress
         -    openshift-sdn                               # When enabled, it will check for the cluster sdn and monitor that namespace
-    watch_schedulable_masters_labels:                    # List of master node labels to watch, add more labels as required with True/False boolean to enable/disable.
-        node-role.kubernetes.io/master: True             # Set to false, to disable watching this label
+    watch_master_schedulable:                            # When enabled checks for the schedulable master nodes with given label.
+        enabled: True
+        label: node-role.kubernetes.io/master
     cerberus_publish_status: True                        # When enabled, cerberus starts a light weight http server and publishes the status
     inspect_components: False                            # Enable it only when OpenShift client is supported to run
                                                          # When enabled, cerberus collects logs, events and metrics of failed components
