Adding pre-commit files and cleaned up files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ on:
   - pull_request
 
 jobs:
-  python-ci:
+  lint-ci:
     runs-on: ubuntu-latest
-    name: Flake8 Lint
+    name: Run pre-commit and install test
     steps:
       - name: Check out source repository
         uses: actions/checkout@v2
@@ -15,25 +15,8 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: "3.8"
-      - uses: BSFishy/pip-action@v1
-        with:
-          requirements: requirements.txt
-      - name: flake8 Lint
-        uses: py-actions/flake8@v1
-        with:
-          ignore: E123,E125
-          exclude: .venv,.git,.tox,dist,doc,*lib/python*,*egg,build
-          max-line-length: 110
-  package-install-ci:
-    runs-on: ubuntu-latest
-    name: Install cerberus
-    steps:
-      - name: Check out source repository
-        uses: actions/checkout@v2
-      - name: Set up Python environment
-        uses: actions/setup-python@v1
-        with:
-          python-version: "3.8"
-      - name: Run install script
+      - name: Run pre-commit
+        uses: pre-commit/action@v2.0.3
+      - name: Install Cerberus
         run: |
           python setup.py develop
