--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,6 +5,9 @@ cerberus:
     watch_nodes: True                                    # Set to True for the cerberus to monitor the cluster nodes
     watch_cluster_operators: True                        # Set to True for cerberus to monitor cluster operators
     watch_url_routes:                                    # Route url's you want to monitor, this is a double array with the url and optional authorization parameter
+    watch_master_schedulable:                            # When enabled checks for the schedulable master nodes with given label.
+        enabled: True
+        label: node-role.kubernetes.io/master
     watch_namespaces:                                    # List of namespaces to be monitored
         -    openshift-etcd
         -    openshift-apiserver
