Correct license from MIT to Apache 2.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = cerberus
 description = TO guard cluster
 author = chaitanyaenr
 author-email = nelluri@redhat.com
-license = mit
+license = Apache License 2.0
 long-description = file: README.md
 long-description-content-type = text/markdown; charset=UTF-8
 classifiers =
