--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,6 +5,7 @@ cerberus:
     watch_nodes: True                                    # Set to True for the cerberus to monitor the cluster nodes
     watch_cluster_operators: True                        # Set to True for cerberus to monitor cluster operators
     watch_url_routes:                                    # Route url's you want to monitor, this is a double array with the url and optional authorization parameter
+    watch_terminating_namespaces: True                   # Set to True to monitor if any namespaces in the 'watch_namespaces' list start terminating
     watch_master_schedulable:                            # When enabled checks for the schedulable master nodes with given label.
         enabled: True
         label: node-role.kubernetes.io/master
