--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,11 @@ jobs:
     - name: Check out code
       uses: actions/checkout@master
     - name: Build the Docker images
-      run: docker build --no-cache -t quay.io/openshift-scale/cerberus containers/
+      run: docker build --no-cache -t quay.io/chaos-kubox/cerberus containers/
     - name: Push the Docker images
-      run: docker push quay.io/openshift-scale/cerberus
+      run: docker push quay.io/chaos-kubox/cerberus
     - name: Remove Image
-      run: docker rmi -f quay.io/openshift-scale/cerberus | exit 0
+      run: docker rmi -f quay.io/chaos-kubox/cerberus | exit 0
     - name: Build Kraken-hub Image
       uses: convictional/trigger-workflow-and-wait@v1.5.0
       with:
