--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Build Kraken-hub Image
       uses: convictional/trigger-workflow-and-wait@v1.5.0
       with:
-        owner: cloud-bulldozer
-        repo: kraken-hub
+        owner: chaos-kubox
+        repo: krkn-hub
         github_token: ${{ secrets.G_ACCESS_TOKEN }}
         workflow_file_name: docker-image.yml
         trigger_workflow: true
