--- a/config/kubernetes_config.yaml
+++ b/config/kubernetes_config.yaml
@@ -35,3 +35,7 @@ tunings:
     iterations: 5                                        # Iterations to loop before stopping the watch, it will be replaced with infinity when the daemon mode is enabled
     sleep_time: 60                                       # Sleep duration between each iteration
     daemon_mode: True                                    # Iterations are set to infinity which means that the cerberus will monitor the resources forever
+
+database:
+    database_path: /tmp/cerberus.db                      # Path where cerberus database needs to be stored
+    reuse_database: False                                # When enabled, the database is reused to store the failures
