--- a/config/kubernetes_config.yaml
+++ b/config/kubernetes_config.yaml
@@ -9,6 +9,7 @@ cerberus:
         label: node-role.kubernetes.io/master
     watch_namespaces:                                    # List of namespaces to be monitored
         -    kube-system
+    watch_namespaces_ignore_pattern: []                  # Ignores pods matching the regex pattern in the namespaces specified under watch_namespaces
     cerberus_publish_status: True                        # When enabled, cerberus starts a light weight http server and publishes the status
     inspect_components: False                            # Enable it only when OpenShift client is supported to run
                                                          # When enabled, cerberus collects logs, events and metrics of failed components
