Update install sources to use stable release

--- a/containers/Dockerfile
+++ b/containers/Dockerfile
@@ -14,7 +14,7 @@ COPY --from=origintests /usr/bin/kubectl /usr/bin/kubectl
 
 # Install dependencies
 RUN yum install -y git python36 python3-pip gcc python3-devel zlib-devel libjpeg-devel && \
-git clone https://github.com/chaos-kubox/cerberus /root/cerberus && \
+git clone https://github.com/redhat-chaos/cerberus.git --branch v1.0.0 /root/cerberus && \
 mkdir -p /root/.kube && cd /root/cerberus && \
 pip3 install -r requirements.txt
 
