--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = cerberus
+version = 1.0.1
 description = TO guard cluster
 author = chaitanyaenr
 author-email = nelluri@redhat.com
