--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,15 +15,15 @@ jobs:
     - name: Check out code
       uses: actions/checkout@master
     - name: Build the Docker images
-      run: docker build --no-cache -t quay.io/chaos-kubox/cerberus containers/
+      run: docker build --no-cache -t quay.io/redhat-chaos/cerberus containers/
     - name: Push the Docker images
-      run: docker push quay.io/chaos-kubox/cerberus
+      run: docker push quay.io/redhat-chaos/cerberus
     - name: Remove Image
-      run: docker rmi -f quay.io/chaos-kubox/cerberus | exit 0
+      run: docker rmi -f quay.io/redhat-chaos/cerberus | exit 0
     - name: Build Kraken-hub Image
       uses: convictional/trigger-workflow-and-wait@v1.5.0
       with:
-        owner: chaos-kubox
+        owner: redhat-chaos
         repo: krkn-hub
         github_token: ${{ secrets.G_ACCESS_TOKEN }}
         workflow_file_name: docker-image.yml
