--- a/containers/cerberus.yml
+++ b/containers/cerberus.yml
@@ -18,7 +18,7 @@ spec:
         - name: cerberus
           securityContext:
             privileged: true
-          image: quay.io/chaos-kubox/cerberus
+          image: quay.io/redhat-chaos/cerberus
           command: ["/bin/sh", "-c"]
           args: ["python3 start_cerberus.py -c config/config.yaml"]
           ports:
