--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 setuptools
-PyYAML>=5.4.1
+pyyaml>=5.4.1
 requests
 kubernetes
 datetime
 configparser
-slackclient
+slack_sdk
 pyfiglet
 prometheus_api_client
 coverage
-multidict
