Update default cni config
OpenShift since 4.13 has defaulted to ovn-kubernetes

Signed-off-by: Joe Talerico <rook@redhat.com>

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,7 +18,7 @@ cerberus:
         -    openshift-machine-api
         -    openshift-kube-scheduler
         -    openshift-ingress
-        -    openshift-sdn                               # When enabled, it will check for the cluster sdn and monitor that namespace
+        -    openshift-ovn-kubernetes                    # When enabled, it will check for the cluster sdn and monitor that namespace
     watch_namespaces_ignore_pattern: [^installer*]       # Ignores pods matching the regex pattern in the namespaces specified under watch_namespaces
     cerberus_publish_status: True                        # When enabled, cerberus starts a light weight http server and publishes the status
     inspect_components: False                            # Enable it only when OpenShift client is supported to run
