--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,8 +10,8 @@ jobs:
     - name: Login in quay
       run: docker login quay.io -u ${QUAY_USER} -p ${QUAY_TOKEN}
       env:
-        QUAY_USER: ${{ secrets.QUAY_USER_1 }}
-        QUAY_TOKEN: ${{ secrets.QUAY_TOKEN_1 }}
+        QUAY_USER: ${{ secrets.QUAY_USERNAME }}
+        QUAY_TOKEN: ${{ secrets.QUAY_PASSWORD }}
     - name: Check out code
       uses: actions/checkout@master
     - name: Build the Docker images
